[package]
name = "feed"
version = "0.1.0"
edition = "2021"
# default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "feed"
path = "src/bin/cli.rs"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.26"
chrono-tz = "0.8.3"
clap = { version = "4.3.15", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.171", features = ["derive"] }
serde-wit = "0.1.0"
serde_json = "1.0.102"
serde_with = { version = "3.0.0", features = ["chrono"] }
