[package]
name = "feed"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "feed"
path = "src/bin/feed.rs"

[features]
# `tracing` enables the FeedLayer bridge. Off by default so the core crate
# and the CLI bypass stay dependency-light for non-Rust producers.
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3.8"

# Run the FeedLayer tests with: cargo test -p feed --features tracing
