[package]
name = "feed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feed"
path = "src/bin/feed.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = { workspace = true }
